--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Navigation Menu -->
     <div class="navigation">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" style="background-color:white;" href="index.html">Heather's Weather</a>
+            <a class="navbar-brand" style="background-color:white;" href="index.html">Weather </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -55,7 +55,7 @@
                 <div class="box" style="padding-bottom: 20px;">
                     <h3 class="title">Summary: </h3>
                     <hr>
-                    <img src="Resources/assets/visualizations/max_temp.png" class="vizualization rounded float-left" alt="City Latitude v.Max Temperature Graph">
+                    <img src="Resources/assets/images/max_temp.png" class="vizualization rounded float-left" alt="City Latitude v.Max Temperature Graph">
                     <p>The purpose of this project was to undertand the relationship between the location of a city and their weather. To do so, we used 
                         the OpenWeather API to gather data for various cities across various latitudes and longitude.
                   
@@ -76,24 +76,24 @@
                         <div class="row" style="padding-bottom: 30px;">
                             <div class="col-6">
                                 <a href="temperature.html">
-                                <img class="panel" src="Resources/assets/max_temp.png" alt="Max Temperature Graph">
+                                <img class="panel" src="Resources/assets/images/max_temp.png" alt="Max Temperature Graph">
                                 </a>
                             </div>
                             <div class="col-6">
                                 <a href="humidity.html">
-                                <img class="panel" src="Resources/assets/humidity.png" alt="Humidity Graph">
+                                <img class="panel" src="Resources/assets/images/humidity.png" alt="Humidity Graph">
                                 </a>
                             </div>
                         </div>
                         <div class="row" style="padding-bottom: 30px;">
                             <div class="col-6">
                                 <a href="cloudiness.html">
-                                <img class="panel" src="Resources/assets/cloudiness.png" alt="Cloudiness Graph">
+                                <img class="panel" src="Resources/assets/images/cloudiness.png" alt="Cloudiness Graph">
                                 </a>
                             </div>
                             <div class="col-6">
                                 <a href="windSpeed.html">
-                                    <img class="panel" src="Resources/assets/wind_speed.png" alt="Wind Speed Graph">
+                                    <img class="panel" src="Resources/assets/images/wind_speed.png" alt="Wind Speed Graph">
                                 </a>
                             </div>
                         </div>
