--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="col-lg-7 col-md-12">
                 <!-- Left Content Box -->
                 <div class="box" style="padding-bottom: 20px;">
-                    <h3 class="title">Summary: </h3>
+                    <h3 class="title">SUMMARY</h3>
                     <hr>
                     <img src="WebVisulization/Resources/assets/images/max_temp.png" class="vizualization rounded float-left" alt="City Latitude v.Max Temperature Graph">
                     <p>The purpose of this project was to undertand the relationship between the location of a city and their weather. To do so, we used 
@@ -70,7 +70,7 @@
             <div class="col-lg-5 col-md-12">
                 <!-- Right Content Box -->
                 <div class="box">
-                    <h3 class="title">Visualizations</h3>
+                    <h3 class="title">VISULIZATION</h3>
                     <hr>
                     <div class="container">
                         <div class="row" style="padding-bottom: 30px;">
