Images path fix

--- a/temperature.html
+++ b/temperature.html
@@ -55,7 +55,7 @@
                 <div class="box" style="padding-bottom: 20px;">
                     <h3 class="title">SUMMARY</h3>
                     <hr>
-                    <img src="WebVisulization/Resources/assets/images/max_temp.png.png" class="vizualization rounded float-left" alt="Temperature">
+                    <img src="WebVisulization/Resources/assets/images/max_temp.png" class="vizualization rounded float-left" alt="Temperature">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eu porta ligula, sed aliquam tellus. 
                         Vivamus interdum ligula ut erat placerat, quis iaculis justo consequat. Integer eleifend nunc eget turpis venenatis, pellentesque cursus odio dictum. 
                         Curabitur non lacinia nunc. Mauris luctus felis tempor justo porta, sit amet bibendum leo tempus. Suspendisse rhoncus neque et quam bibendum dignissim. 
