more minor edits

--- a/WindSpeed.html
+++ b/WindSpeed.html
@@ -33,7 +33,7 @@
                             <a class="dropdown-item" href="temperature.html">Temperature</a>
                             <a class="dropdown-item" href="humidity.html">Humidity</a>
                             <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
-                            <a class="dropdown-item" href="Windspeed.html">Wind Speed</a>
+                            <a class="dropdown-item" href="WindSpeed.html">Wind Speed</a>
                         </div>
                     </li>
                     <li class="nav-item">
@@ -55,7 +55,7 @@
                 <div class="box" style="padding-bottom: 20px;">
                     <h3 class="title">SUMMARY</h3>
                     <hr>
-                    <img src="WebVisulization/Resources/assets/images/winnd_speed.png" class="vizualization rounded float-left" alt="Wind Speed">
+                    <img src="WebVisulization/Resources/assets/images/wind_speed.png" class="vizualization rounded float-left" alt="Wind Speed">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eu porta ligula, sed aliquam tellus. 
                         Vivamus interdum ligula ut erat placerat, quis iaculis justo consequat. Integer eleifend nunc eget turpis venenatis, pellentesque cursus odio dictum. 
                         Curabitur non lacinia nunc. Mauris luctus felis tempor justo porta, sit amet bibendum leo tempus. Suspendisse rhoncus neque et quam bibendum dignissim. 
