--- a/comparison.html
+++ b/comparison.html
@@ -30,7 +30,7 @@
                             Plots
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="temp.html">Temperature</a>
+                            <a class="dropdown-item" href="temperature.html">Temperature</a>
                             <a class="dropdown-item" href="humidity.html">Humidity</a>
                             <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
                             <a class="dropdown-item" href="WindSpeed.html">Wind Speed</a>
