--- a/data.html
+++ b/data.html
@@ -20,7 +20,7 @@
     <!-- Navigation Menu -->
     <div class="navigation">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" style="background-color: white;" href="index.html">Heather's Weather</a>
+            <a class="navbar-brand" style="background-color: white;" href="index.html">Weather</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -52,7 +52,7 @@
         <div class="box">
             <h3 class="title">DATA</h3>
             <hr>
-            <p>The table below includes the data used for plotting during this project.</p>
+            <p>The table below includes the data used for plotting for this project.</p>
             <br>
             <div class="table-responsive" style="overflow-x:auto; overflow-y:auto; max-height:470px; max-width: auto;">
                 <table class="table table-striped table-hover table-condensed">
