--- a/cloudiness.html
+++ b/cloudiness.html
@@ -69,7 +69,7 @@
                     <div class="container">
                         <div class="row" style="padding-bottom: 30px;">
                             <div class="col-6">
-                                <a href="temp.html">
+                                <a href="temperature.html">
                                   <img class="panel" src="WebVisulization/Resources/assets/images/max_temp.png" alt="Max Temperature Graph">
                                 </a>
                             </div>
@@ -87,7 +87,7 @@
                             </div>
                             <div class="col-6">
                                 <a href="WindSpeed.html">
-                                    <img class="panel" src="WebVisulization/Resources/assets/images/cloudiness.png" alt="Wind Speed Graph">
+                                    <img class="panel" src="WebVisulization/Resources/assets/images/wind_speed.png" alt="Wind Speed Graph">
                                 </a>
                             </div>
                         </div>
@@ -98,7 +98,7 @@
     </div>  
     <!-- Footer -->
     <footer>
-        <div class="footer">&copy; Copyright Jessica Murilll o 2020. All Rights Reserved.</div>
+        <div class="footer">&copy; Copyright Jessica Murillo 2020. All Rights Reserved.</div>
     </footer>
 </body>
 </html>
