--- a/cloudiness.html
+++ b/cloudiness.html
@@ -20,7 +20,7 @@
     <!-- Navigation Menu -->
     <div class="navigation">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" style="background-color: white;" href="index.html">Weather</a>
+            <a class="navbar-brand" style="background-color: transparent;" href="index.html">Weather</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
