--- a/cloudiness.html
+++ b/cloudiness.html
@@ -54,7 +54,7 @@
             <div class="col-lg-7 col-md-12">
                 <!-- Left Content Box -->
                 <div class="box" style="padding-bottom: 120px;">
-                    <h3 class="title">Cloudiness</h3>
+                    <h3 class="title">CLOUDINESS v. CITY LATITUDE</h3>
                     <hr>
                     <img src="WebVisulization/Resources/assets/images/cloudiness.png" class="vizualization rounded float-left" alt="Cloudiness Graph">
                     <p>The relationship between latitude and cloudiness is not strong. 
