--- a/temperature.html
+++ b/temperature.html
@@ -53,7 +53,7 @@
             <div class="col-lg-7 col-md-12">
                 <!-- Left Content Box -->
                 <div class="box" style="padding-bottom: 20px;">
-                    <h3 class="title">SUMMARY</h3>
+                    <h3 class="title">TEMPERATURE v. CITY LATITUDE </h3>
                     <hr>
                     <img src="WebVisulization/Resources/assets/images/max_temp.png" class="vizualization rounded float-left" alt="Temperature">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eu porta ligula, sed aliquam tellus. 
