--- a/temperature.html
+++ b/temperature.html
@@ -33,7 +33,7 @@
                             <a class="dropdown-item" href="temperature.html">Temperature</a>
                             <a class="dropdown-item" href="humidity.html">Humidity</a>
                             <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
-                            <a class="dropdown-item" href="Windspeed.html">Wind Speed</a>
+                            <a class="dropdown-item" href="WindSpeed.html">Wind Speed</a>
                         </div>
                     </li>
                     <li class="nav-item">
