--- a/WindSpeed.html
+++ b/WindSpeed.html
@@ -87,7 +87,7 @@
                                 </a>
                             </div>
                             <div class="col-6">
-                                <a href="windSpeed.html">
+                                <a href="WindSpeed.html">
                                     <img class="panel" src="WebVisulization/Resources/assets/images/wind_speed.png" alt="Wind Speed Graph">
                                 </a>
                             </div>
