--- a/cloudiness.html
+++ b/cloudiness.html
@@ -57,8 +57,9 @@
                     <h3 class="title">CLOUDINESS v. CITY LATITUDE</h3>
                     <hr>
                     <img src="WebVisulization/Resources/assets/images/cloudiness.png" class="vizualization rounded float-left" alt="Cloudiness Graph">
-                    <p>The relationship between latitude and cloudiness is not strong. 
-                        It is interesting to see that a strong collection of cities around 0, 80, and 100% cloudiness.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque id neque eget metus sagittis cursus ut nec odio. Morbi ac faucibus eros. 
+                        Curabitur vestibulum, ligula sit amet tempus dictum, dolor purus condimentum tellus, ac ultrices neque metus eu turpis. 
+                        Nullam et placerat augue, ac fermentum ligula. Mauris ultricies ex et nisi tristique dapibus. In fringilla tincidunt molestie. Ut maximus cursus massa mattis semper. Nunc imperdiet.</p>
                 </div>
             </div>
             <div class="col-lg-5 col-md-12">
