--- a/index.html
+++ b/index.html
@@ -56,15 +56,12 @@
                     <h3 class="title">SUMMARY</h3>
                     <hr>
                     <img src="WebVisulization/Resources/assets/images/max_temp.png" class="vizualization rounded float-left" alt="City Latitude v.Max Temperature Graph">
-                    <p>The purpose of this project was to undertand the relationship between the location of a city and their weather. To do so, we used 
-                        the OpenWeather API to gather data for various cities across various latitudes and longitude.
-                  
-                        
-                        to analyze how weather changes as you get closer to the equator. 
-                    To accomplish this analysis, wefirst pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.</p>
-                    <p>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude then exported those images. 
-                    Factors we looked at included: temperature, cloudiness, wind speed, and humidity. This site provides the source data and
-                    visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer eget lorem pretium, ullamcorper enim eu, consectetur lacus. Donec ut urna orci. Duis quis ultricies ex. Suspendisse mollis a purus at imperdiet. 
+                        Morbi vitae quam sit amet magna elementum condimentum sed at neque. Morbi mattis, neque quis tincidunt efficitur, mi nisl mattis ligula, sit amet sagittis metus magna pulvinar felis. Nulla ante tortor, lacinia ut leo nec, auctor efficitur augue. 
+                        In ac dictum mauris. Duis consequat eros quis turpis pretium porta. Nulla ornare efficitur diam. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam erat volutpat.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque id neque eget metus sagittis cursus ut nec odio. 
+                        Morbi ac faucibus eros. Curabitur vestibulum, ligula sit amet tempus dictum, dolor purus condimentum tellus, ac ultrices neque metus eu turpis. 
+                        Nullam et placerat augue, ac fermentum ligula. Mauris ultricies ex et nisi tristique dapibus. In fringilla tincidunt molestie. Ut maximus cursus massa mattis semper. Nunc imperdiet.</p>
                 </div>
             </div>
             <div class="col-lg-5 col-md-12">
