--- a/comparison.html
+++ b/comparison.html
@@ -59,7 +59,7 @@
                     <div class="row">
                         <div class="col-lg-6" style="padding-bottom: 30px;">
                             <div class="title">Max Temperature</div>
-                            <a href="temperature.html">
+                            <a href="temperature.htmlB">
                                 <img class="panel" src="WebVisulization/Resources/assets/images/max_temp.png" alt="Max Temperature Graph">
                             </a>
                         </div>
